--- a/languages/haskell.org
+++ b/languages/haskell.org
@@ -1,3 +1,6 @@
+- https://github.com/reanimate/reanimate
+- Haskell via Sokoban - Tutorial - https://haskell-via-sokoban.nomeata.de/
+- Learn Haskell making a static blog generator - https://soupi.github.io/learn-haskell-blog-generator/
 - https://crypto.stanford.edu/~blynn/haskell/
 - https://leanpub.com/haskell-cookbook/read
 - https://www.youtube.com/channel/UCNp-DVb8cQRIOo32sZhWgNg
