--- a/languages/python.org
+++ b/languages/python.org
@@ -1,3 +1,5 @@
+- James Powell: So you want to be a Python expert? | PyData Seattle 2017
+  https://www.youtube.com/watch?v=cKPlPJyQrt4
 - https://docs.python-guide.org/
 - https://github.com/realpython/python-guide
 - https://github.com/sfermigier/awesome-functional-python
